# Raidionics-Slicer

./: .gitignore  CMakeLists.txt  README.md  Raidionics.s4ext
DeepSintef/: CMakeLists.txt
DeepSintef/DeepSintef/: CMakeLists.txt  DeepSintef.py  Raidionics.py
DeepSintef/DeepSintef/src/: DeepSintefLogic.py  RaidionicsLogic.py
DeepSintef/DeepSintef/src/gui/: DeepSintefWidget.py
DeepSintef/DeepSintef/src/gui/Diagnosis/: BaseDiagnosisWidget.py  DiagnosisExecutionWidget.py  DiagnosisInterfaceWidget.py  DiagnosisMediastinumResultsWidget.py  DiagnosisNeuroPartResultsWidget.py  DiagnosisNeuroResultsWidget.py
DeepSintef/DeepSintef/src/gui/Segmentation/: BaseSegmentationWidget.py  ModelsExecutionWidget.py  ModelsInterfaceWidget.py
DeepSintef/DeepSintef/src/gui/UtilsWidgets/: DownloadDialog.py
DeepSintef/DeepSintef/src/logic/: mediastinum_diagnosis_result_parameters.py  mediastinum_diagnosis_slicer_interface.py  model_parameters.py  neuro_diagnosis_result_parameters.py  neuro_diagnosis_slicer_interface.py
DeepSintef/DeepSintef/src/utils/: io_utilities.py  resources.py
Raidionics/: CMakeLists.txt  Raidionics.py
Raidionics/Raidionics/: CMakeLists.txt  Raidionics.py
Raidionics/Raidionics/src/: RaidionicsLogic.py
Raidionics/Raidionics/src/gui/: RaidionicsWidget.py
Raidionics/Raidionics/src/gui/Diagnosis/: BaseDiagnosisWidget.py  DiagnosisExecutionWidget.py  DiagnosisInterfaceWidget.py  DiagnosisNeuroPartResultsWidget.py  DiagnosisNeuroResultsWidget.py
Raidionics/Raidionics/src/gui/Segmentation/: ModelsExecutionWidget.py  ModelsInterfaceWidget.py
Raidionics/Raidionics/src/gui/UtilsWidgets/: DownloadDialog.py  VolumeSelectorWidget.py
Raidionics/Raidionics/src/logic/: model_parameters.py  neuro_diagnosis_result_parameters.py  neuro_diagnosis_slicer_interface.py
Raidionics/Raidionics/src/utils/: backend_utilities.py  io_utilities.py  resources.py
Raidionics/src/: RaidionicsLogic.py
Raidionics/src/gui/: RaidionicsWidget.py
Raidionics/src/gui/Diagnosis/: BaseDiagnosisWidget.py  DiagnosisExecutionWidget.py  DiagnosisInterfaceWidget.py  DiagnosisNeuroResultsWidget.py
Raidionics/src/gui/Segmentation/: BaseSegmentationWidget.py  ModelsInterfaceWidget.py
Raidionics/src/gui/UtilsWidgets/: DownloadDialog.py  VolumeSelectorWidget.py
Raidionics/src/logic/: model_parameters.py  neuro_diagnosis_slicer_interface.py
Raidionics/src/utils/: backend_utilities.py  io_utilities.py  resources.py
